--- a/1.ui
+++ b/1.ui
@@ -6,18 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>698</width>
+    <width>684</width>
     <height>580</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLineEdit" name="r2">
+  <widget class="QLineEdit" name="r4">
    <property name="geometry">
     <rect>
-     <x>380</x>
-     <y>130</y>
+     <x>370</x>
+     <y>180</y>
      <width>113</width>
      <height>22</height>
     </rect>
@@ -26,7 +26,7 @@
   <widget class="QLabel" name="l4">
    <property name="geometry">
     <rect>
-     <x>400</x>
+     <x>390</x>
      <y>80</y>
      <width>81</width>
      <height>16</height>
@@ -39,21 +39,21 @@
   <widget class="QLabel" name="l5">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>120</y>
-     <width>121</width>
+     <x>490</x>
+     <y>180</y>
+     <width>31</width>
      <height>16</height>
     </rect>
    </property>
    <property name="text">
-    <string>Электронная Почта</string>
+    <string>Email</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="r4">
+  <widget class="QLineEdit" name="r3">
    <property name="geometry">
     <rect>
-     <x>380</x>
-     <y>190</y>
+     <x>370</x>
+     <y>150</y>
      <width>113</width>
      <height>22</height>
     </rect>
@@ -62,9 +62,9 @@
   <widget class="QLabel" name="l7">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>180</y>
-     <width>55</width>
+     <x>490</x>
+     <y>140</y>
+     <width>51</width>
      <height>16</height>
     </rect>
    </property>
@@ -157,11 +157,11 @@
     <string>Войти</string>
    </property>
   </widget>
-  <widget class="QLineEdit" name="r3">
+  <widget class="QLineEdit" name="r2">
    <property name="geometry">
     <rect>
-     <x>380</x>
-     <y>160</y>
+     <x>370</x>
+     <y>120</y>
      <width>113</width>
      <height>22</height>
     </rect>
@@ -170,9 +170,9 @@
   <widget class="QLabel" name="l6">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>150</y>
-     <width>55</width>
+     <x>490</x>
+     <y>110</y>
+     <width>41</width>
      <height>16</height>
     </rect>
    </property>
@@ -196,8 +196,8 @@
   <widget class="QLabel" name="z2">
    <property name="geometry">
     <rect>
-     <x>560</x>
-     <y>290</y>
+     <x>440</x>
+     <y>300</y>
      <width>55</width>
      <height>16</height>
     </rect>
@@ -209,8 +209,8 @@
   <widget class="QLabel" name="z3">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>310</y>
+     <x>370</x>
+     <y>320</y>
      <width>181</width>
      <height>21</height>
     </rect>
@@ -222,8 +222,8 @@
   <widget class="QLabel" name="z4">
    <property name="geometry">
     <rect>
-     <x>560</x>
-     <y>340</y>
+     <x>440</x>
+     <y>350</y>
      <width>55</width>
      <height>16</height>
     </rect>
@@ -232,36 +232,10 @@
     <string>Весело</string>
    </property>
   </widget>
-  <widget class="QLabel" name="z5">
-   <property name="geometry">
-    <rect>
-     <x>480</x>
-     <y>400</y>
-     <width>55</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Логин</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="z6">
-   <property name="geometry">
-    <rect>
-     <x>480</x>
-     <y>450</y>
-     <width>81</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Акселькоины</string>
-   </property>
-  </widget>
   <widget class="QLabel" name="lo">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>0</x>
      <y>210</y>
      <width>291</width>
      <height>16</height>
@@ -271,55 +245,14 @@
     <enum>QFrame::NoFrame</enum>
    </property>
    <property name="text">
-    <string>Ошибка! Неправильно введён Логин или Пароль</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>480</x>
-     <y>480</y>
-     <width>31</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Ранг</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>480</x>
-     <y>510</y>
-     <width>31</width>
-     <height>16</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Лвл</string>
-   </property>
-  </widget>
-  <widget class="QWidget" name="widget" native="true">
-   <property name="geometry">
-    <rect>
-     <x>200</x>
-     <y>320</y>
-     <width>111</width>
-     <height>101</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">QWidget{
-background-color:qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(186, 0, 152, 255), stop:1 rgba(255, 255, 255, 255))
-}</string>
+    <string>Ошибка: Неправильно введён Логин или Пароль</string>
    </property>
   </widget>
   <widget class="QLabel" name="z1">
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>340</y>
+     <x>280</x>
+     <y>300</y>
      <width>71</width>
      <height>41</height>
     </rect>
@@ -333,6 +266,225 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
    </property>
    <property name="text">
     <string>RIF</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lr1">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>210</y>
+     <width>321</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Ошибка: Проверьте правильность написания данных</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="p2">
+   <property name="geometry">
+    <rect>
+     <x>390</x>
+     <y>240</y>
+     <width>93</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Подтвердить</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="z5">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>390</y>
+     <width>55</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Логин</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="z6">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>440</y>
+     <width>81</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Акселькоины</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="z7">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>480</y>
+     <width>51</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Рейтинг</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="z9">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>480</y>
+     <width>113</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="z8">
+   <property name="geometry">
+    <rect>
+     <x>370</x>
+     <y>440</y>
+     <width>113</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="z11">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>290</y>
+     <width>121</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Выйти из аккаунта</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="p3">
+   <property name="geometry">
+    <rect>
+     <x>120</x>
+     <y>330</y>
+     <width>121</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Изменить профиль</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="o3">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>420</y>
+     <width>113</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="o5">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>450</y>
+     <width>113</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="o7">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>480</y>
+     <width>113</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="o4">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>420</y>
+     <width>55</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Логин</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="o8">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>480</y>
+     <width>55</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Email</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="o1">
+   <property name="geometry">
+    <rect>
+     <x>60</x>
+     <y>390</y>
+     <width>71</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Изменение:</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="o2">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>380</y>
+     <width>93</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Вернуться</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="p4">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>510</y>
+     <width>93</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Подтвердить</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="o6">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>450</y>
+     <width>55</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Пароль</string>
    </property>
   </widget>
  </widget>
