--- a/1.ui
+++ b/1.ui
@@ -7,17 +7,22 @@
     <x>0</x>
     <y>0</y>
     <width>684</width>
-    <height>580</height>
+    <height>664</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog{
+backgroud-color:rgb(71, 71, 71)
+}</string>
+  </property>
   <widget class="QLineEdit" name="r4">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>180</y>
+     <x>360</x>
+     <y>110</y>
      <width>113</width>
      <height>22</height>
     </rect>
@@ -26,8 +31,8 @@
   <widget class="QLabel" name="l4">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>80</y>
+     <x>380</x>
+     <y>10</y>
      <width>81</width>
      <height>16</height>
     </rect>
@@ -39,8 +44,8 @@
   <widget class="QLabel" name="l5">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>180</y>
+     <x>480</x>
+     <y>110</y>
      <width>31</width>
      <height>16</height>
     </rect>
@@ -52,8 +57,8 @@
   <widget class="QLineEdit" name="r3">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>150</y>
+     <x>360</x>
+     <y>80</y>
      <width>113</width>
      <height>22</height>
     </rect>
@@ -62,8 +67,8 @@
   <widget class="QLabel" name="l7">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>140</y>
+     <x>480</x>
+     <y>70</y>
      <width>51</width>
      <height>16</height>
     </rect>
@@ -76,7 +81,7 @@
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>120</y>
+     <y>50</y>
      <width>55</width>
      <height>16</height>
     </rect>
@@ -89,7 +94,7 @@
    <property name="geometry">
     <rect>
      <x>150</x>
-     <y>170</y>
+     <y>100</y>
      <width>55</width>
      <height>16</height>
     </rect>
@@ -102,7 +107,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>130</y>
+     <y>60</y>
      <width>113</width>
      <height>22</height>
     </rect>
@@ -112,7 +117,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>180</y>
+     <y>110</y>
      <width>113</width>
      <height>22</height>
     </rect>
@@ -122,7 +127,7 @@
    <property name="geometry">
     <rect>
      <x>80</x>
-     <y>90</y>
+     <y>20</y>
      <width>55</width>
      <height>16</height>
     </rect>
@@ -135,7 +140,7 @@
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>70</y>
+     <y>0</y>
      <width>93</width>
      <height>28</height>
     </rect>
@@ -148,7 +153,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>230</y>
+     <y>160</y>
      <width>93</width>
      <height>28</height>
     </rect>
@@ -160,8 +165,8 @@
   <widget class="QLineEdit" name="r2">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>120</y>
+     <x>360</x>
+     <y>50</y>
      <width>113</width>
      <height>22</height>
     </rect>
@@ -170,8 +175,8 @@
   <widget class="QLabel" name="l6">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>110</y>
+     <x>480</x>
+     <y>40</y>
      <width>41</width>
      <height>16</height>
     </rect>
@@ -183,8 +188,8 @@
   <widget class="QPushButton" name="rv">
    <property name="geometry">
     <rect>
-     <x>500</x>
-     <y>70</y>
+     <x>490</x>
+     <y>0</y>
      <width>121</width>
      <height>28</height>
     </rect>
@@ -196,8 +201,8 @@
   <widget class="QLabel" name="z2">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>290</y>
+     <x>560</x>
+     <y>320</y>
      <width>55</width>
      <height>16</height>
     </rect>
@@ -209,8 +214,8 @@
   <widget class="QLabel" name="z3">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>310</y>
+     <x>490</x>
+     <y>340</y>
      <width>181</width>
      <height>21</height>
     </rect>
@@ -222,8 +227,8 @@
   <widget class="QLabel" name="z4">
    <property name="geometry">
     <rect>
-     <x>550</x>
-     <y>340</y>
+     <x>560</x>
+     <y>370</y>
      <width>55</width>
      <height>16</height>
     </rect>
@@ -236,7 +241,7 @@
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>210</y>
+     <y>140</y>
      <width>291</width>
      <height>16</height>
     </rect>
@@ -251,8 +256,8 @@
   <widget class="QLabel" name="z1">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>290</y>
+     <x>400</x>
+     <y>320</y>
      <width>71</width>
      <height>41</height>
     </rect>
@@ -271,8 +276,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QLabel" name="lr1">
    <property name="geometry">
     <rect>
-     <x>340</x>
-     <y>210</y>
+     <x>330</x>
+     <y>140</y>
      <width>321</width>
      <height>16</height>
     </rect>
@@ -284,8 +289,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QPushButton" name="p2">
    <property name="geometry">
     <rect>
-     <x>390</x>
-     <y>240</y>
+     <x>380</x>
+     <y>170</y>
      <width>93</width>
      <height>28</height>
     </rect>
@@ -297,8 +302,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QLabel" name="z5">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>380</y>
+     <x>490</x>
+     <y>400</y>
      <width>55</width>
      <height>16</height>
     </rect>
@@ -310,8 +315,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QLabel" name="z6">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>430</y>
+     <x>490</x>
+     <y>410</y>
      <width>81</width>
      <height>16</height>
     </rect>
@@ -323,8 +328,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QLabel" name="z7">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>470</y>
+     <x>490</x>
+     <y>430</y>
      <width>51</width>
      <height>16</height>
     </rect>
@@ -339,11 +344,14 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
    </property>
    <property name="geometry">
     <rect>
-     <x>560</x>
-     <y>470</y>
+     <x>570</x>
+     <y>410</y>
      <width>113</width>
      <height>22</height>
     </rect>
+   </property>
+   <property name="text">
+    <string>не надо</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="z8">
@@ -352,18 +360,21 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
    </property>
    <property name="geometry">
     <rect>
-     <x>560</x>
-     <y>430</y>
+     <x>570</x>
+     <y>390</y>
      <width>113</width>
      <height>22</height>
     </rect>
+   </property>
+   <property name="text">
+    <string>global p</string>
    </property>
   </widget>
   <widget class="QPushButton" name="z11">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>280</y>
+     <x>240</x>
+     <y>310</y>
      <width>121</width>
      <height>28</height>
     </rect>
@@ -375,8 +386,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QPushButton" name="p3">
    <property name="geometry">
     <rect>
-     <x>230</x>
-     <y>320</y>
+     <x>240</x>
+     <y>350</y>
      <width>121</width>
      <height>31</height>
     </rect>
@@ -388,8 +399,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QLineEdit" name="o3">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>420</y>
+     <x>30</x>
+     <y>250</y>
      <width>113</width>
      <height>22</height>
     </rect>
@@ -398,8 +409,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QLineEdit" name="o5">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>450</y>
+     <x>30</x>
+     <y>280</y>
      <width>113</width>
      <height>22</height>
     </rect>
@@ -408,8 +419,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QLineEdit" name="o7">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>480</y>
+     <x>30</x>
+     <y>310</y>
      <width>113</width>
      <height>22</height>
     </rect>
@@ -418,8 +429,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QLabel" name="o4">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>420</y>
+     <x>150</x>
+     <y>250</y>
      <width>55</width>
      <height>16</height>
     </rect>
@@ -431,9 +442,9 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QLabel" name="o8">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>480</y>
-     <width>55</width>
+     <x>150</x>
+     <y>310</y>
+     <width>41</width>
      <height>16</height>
     </rect>
    </property>
@@ -444,8 +455,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QLabel" name="o1">
    <property name="geometry">
     <rect>
-     <x>60</x>
-     <y>390</y>
+     <x>50</x>
+     <y>220</y>
      <width>71</width>
      <height>16</height>
     </rect>
@@ -457,8 +468,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QPushButton" name="o2">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>380</y>
+     <x>130</x>
+     <y>210</y>
      <width>93</width>
      <height>28</height>
     </rect>
@@ -470,8 +481,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QPushButton" name="p4">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>510</y>
+     <x>40</x>
+     <y>340</y>
      <width>93</width>
      <height>28</height>
     </rect>
@@ -483,8 +494,8 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
   <widget class="QLabel" name="o6">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>450</y>
+     <x>150</x>
+     <y>280</y>
      <width>55</width>
      <height>16</height>
     </rect>
@@ -492,6 +503,328 @@ background: linear-gradient(93deg, rgb(12,12,12)#B313FE 40.64%,rgb(44,44,44) #1A
    <property name="text">
     <string>Пароль</string>
    </property>
+  </widget>
+  <widget class="QPushButton" name="pbd">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>410</y>
+     <width>93</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Достижения</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbm">
+   <property name="geometry">
+    <rect>
+     <x>590</x>
+     <y>500</y>
+     <width>93</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Магазин</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbz">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>600</y>
+     <width>93</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Задания</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="lem">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>530</y>
+     <width>113</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="combp">
+   <property name="geometry">
+    <rect>
+     <x>600</x>
+     <y>270</y>
+     <width>71</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lp">
+   <property name="geometry">
+    <rect>
+     <x>600</x>
+     <y>250</y>
+     <width>71</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Покупки шт</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbzb">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>580</y>
+     <width>51</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&gt;Назад</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbdb">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>380</y>
+     <width>51</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&gt;Назад</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbmb">
+   <property name="geometry">
+    <rect>
+     <x>530</x>
+     <y>480</y>
+     <width>51</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>&gt;Назад</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="combz">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>580</y>
+     <width>73</width>
+     <height>22</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lz">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>560</y>
+     <width>55</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Задания</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wz" native="true">
+   <property name="geometry">
+    <rect>
+     <x>220</x>
+     <y>530</y>
+     <width>120</width>
+     <height>121</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QWidget{
+background-color:rgb(182, 182, 182)
+}</string>
+   </property>
+   <widget class="QLabel" name="vop1">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>10</y>
+      <width>55</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Вопрос?</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="cb3">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>100</y>
+      <width>81</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="cb2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>70</y>
+      <width>81</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>варианты</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="cb1">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>40</y>
+      <width>81</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QLabel" name="lm">
+   <property name="geometry">
+    <rect>
+     <x>580</x>
+     <y>540</y>
+     <width>101</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Список товаров</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="lzm">
+   <property name="geometry">
+    <rect>
+     <x>440</x>
+     <y>510</y>
+     <width>101</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Цена и подтвер</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pbmp">
+   <property name="geometry">
+    <rect>
+     <x>450</x>
+     <y>560</y>
+     <width>93</width>
+     <height>28</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Подтвердить?</string>
+   </property>
+  </widget>
+  <widget class="QTableWidget" name="twm">
+   <property name="geometry">
+    <rect>
+     <x>580</x>
+     <y>560</y>
+     <width>101</width>
+     <height>101</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QWidget" name="wd" native="true">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>390</y>
+     <width>311</width>
+     <height>101</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QWidget{
+background-color:rgb(182, 182, 182)
+}
+</string>
+   </property>
+   <widget class="QLabel" name="ld">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>50</y>
+      <width>41</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Всего</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lvd">
+    <property name="geometry">
+     <rect>
+      <x>220</x>
+      <y>0</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Выполненые</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="combd">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>70</y>
+      <width>141</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="combvd">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>20</y>
+      <width>141</width>
+      <height>20</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="led">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>10</y>
+      <width>151</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
